force-app/main/default/objects/pse__Practice_Plan__c/pse__Practice_Plan__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__PracticePlanHelp</customHelpPage>
    <description>Captures planned bookings, billings, costs, margin, revenue, and utilization for the practice over a defined time period. Apart from services forecasting, fields on this object are not validated (other than for format) or used in any formulae. Practices and time periods have a master-detail relationship with practice plans.</description>
    <label>Practice Plan</label>
    <nameField>
        <displayFormat>PP-{0}</displayFormat>
        <label>Practice Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Practice Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>