force-app/main/default/objects/pse__Practice_Plan__c/fields/pse__Time_Period__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Period__c</fullName>
    <label>Time Period</label>
    <referenceTo>pse__Time_Period__c</referenceTo>
    <relationshipLabel>Practice Plans</relationshipLabel>
    <relationshipName>Practice_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>